--- a/HuntWalker/HuntWalker.csproj
+++ b/HuntWalker/HuntWalker.csproj
@@ -5,9 +5,10 @@
   <PropertyGroup>
     <Version>0.0.0.1</Version>
     <Description>A sample plugin.</Description>
-    <PackageProjectUrl>https://github.com/goatcorp/SamplePlugin</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/amki/hunt-walker</PackageProjectUrl>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
+    <TargetFramework>net8.0-windows8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
